--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,12 @@
         "@emotion/react": "^11.7.0",
         "@emotion/styled": "^11.6.0",
         "@fontsource/roboto": "^4.5.1",
+        "@material-ui/core": "^4.12.3",
         "@mui/icons-material": "^5.2.1",
         "@mui/material": "^5.2.3",
+        "@types/marked": "^4.0.1",
         "axios": "^0.24.0",
+        "marked": "^4.0.8",
         "next": "^11.0.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
