--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
     "@ngrx/component-store": "^13.0.2",
+    "@types/marked": "^4.0.1",
+    "marked": "^4.0.10",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
